refac(front): #3678 change footer background
- Changed the footer background color to white


Former-commit-id: 2389971786709b1bc410b8aaf1e8bd0147da00c0

--- a/theme/2020/templates/footer.html
+++ b/theme/2020/templates/footer.html
@@ -1,187 +1,189 @@
-<div class="mw9 df-l db-ml ml-auto ml-auto mr-auto mb5-l mb5-m mb4 pt4-ns pt2 footer-component">
-  <!-- company logo -->
-  <div class="pt1 pt4-l pl2-l w-footer-phrase mh-ml">
-    <div>
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
-        alt="Fluid Attacks logo" class="w2-5 fl ml5 pl3 nl3-l mr0-l db-l dn">
-      <div class="ml4-l mr-auto ml-auto tl-l tc">
-        <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">Ready to start with Fluid Attacks?</p>
-        <span class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
-          <div class="w2-5 dib"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
-            alt="Fluid Attacks logo"></div>
-          Ready to start?</span>
-        <div class="dib-l dn ml3">
-          <a class="roboto fw1 fl f4 no-underline c-fluid-bk hv-fluid-dkred pb5"
-             href="{{ SITEURL }}/contact-us/">
-            <img
-            class="w1 relative pt2 ml2 fr"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-btn.svg"
-            alt="Young hacker smiling">
-            Contact Us
+<div class="bg-white">
+  <div class="mw9 center df-l db-ml pb5-l pb5-m pb4 pt4-ns pt2 footer-component">
+    <!-- company logo -->
+    <div class="pt1 pt4-l pl2-l w-footer-phrase mh-ml">
+      <div>
+        <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
+          alt="Fluid Attacks logo" class="w2-5 fl ml5 pl3 nl3-l mr0-l db-l dn">
+        <div class="ml4-l mr-auto ml-auto tl-l tc">
+          <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">Ready to start with Fluid Attacks?</p>
+          <span class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
+            <div class="w2-5 dib"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
+              alt="Fluid Attacks logo"></div>
+            Ready to start?</span>
+          <div class="dib-l dn ml3">
+            <a class="roboto fw1 fl f4 no-underline c-fluid-bk hv-fluid-dkred pb5"
+               href="{{ SITEURL }}/contact-us/">
+              <img
+              class="w1 relative pt2 ml2 fr"
+              src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-btn.svg"
+              alt="Young hacker smiling">
+              Contact Us
+            </a>
+          </div>
+          <div class="dn-l dib tc w-100-s w-100-m pb4">
+            <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
+               href="{{ SITEURL }}/contact-us/">
+              <span class="br2 bannerbt hv-bt-fluid-rd ph5 pv2 bt-trans white b roboto pointer mt2">
+                 Contact Fluid Attacks
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="pb4 w-footer-links ml0-footer text-center-ml db-l dn nowrap">
+      <div class="pt4-l b dib v-top tl mr2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/products/" >
+            Products
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/products/integrates/">
+            Integrates
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/products/drills/">
+            Drills
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/products/forces/">
+            Forces
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/services/continuous-hacking/" >
+            Services
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/services/continuous-hacking/">
+            Continuous Hacking
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/services/one-shot-hacking/">
+            One-shot Hacking
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/services/comparative/">
+            Comparative
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/about-us/" >
+            About Us
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/about-us/certifications/">
+            Certifications
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/about-us/differentiators/">
+            Differentiators
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/about-us/values/">
+            Values
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/about-us/reviews/">
+            Reviews
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+          href="{{ SITEURL }}/resources/">
+            Resources
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+          href="{{ SITEURL }}/about-us/events/">
+            Events
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+          href="{{ SITEURL }}/about-us/people/">
+            People
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+          href="{{ SITEURL }}/about-us/partners/">
+            Partners
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+          href="{{ SITEURL }}/security/">
+            Security
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/blog/" >
+            Blog
+          </a><br>
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/careers/" >
+            Careers
+          </a><br>
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+          href="{{ SITEURL }}/faq/" >
+            FAQ
+          </a><br>
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+          href="https://community.fluidattacks.com/" >
+            Community
+          </a><br>
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+          href="{{ SITEURL }}/contact-us/" >
+            Contact
+          </a><br>
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+          href="{{ SITEURL }}/subscription/" >
+            Newsletter
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib v-top tl mw-14 fr-xl">
+        <div class="social-media">
+          <a class="pr3 no-underline" href="https://www.instagram.com/fluidattacks/">
+            <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.png"
+              alt="Instagram logo">
+          </a>
+          <a class="pr3 no-underline" href="https://www.facebook.com/Fluid-Attacks-267692397253577/">
+            <img loading="lazy" class="hv-fluid-rd w1" src="{{ SITEURL }}/theme/images/social-media/social-facebook.png"
+              alt="Facebook logo">
+          </a>
+          <a class="pr3 no-underline" href="https://www.linkedin.com/company/fluidattacks/">
+            <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-linkedin.png"
+              alt="Linkedin logo">
+          </a>
+          <a class="pr3 no-underline" href="https://twitter.com/fluidattacks/">
+            <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-twitter.png"
+              alt="Twitter logo">
+          </a>
+          <a class="pr3 no-underline" href="https://www.youtube.com/c/fluidattacks/">
+            <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-youtube.png"
+              alt="Youtube logo">
           </a>
         </div>
-        <div class="dn-l dib tc w-100-s w-100-m pb4">
-          <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
-             href="{{ SITEURL }}/contact-us/">
-            <span class="br2 bannerbt hv-bt-fluid-rd ph5 pv2 bt-trans white b roboto pointer mt2">
-               Contact Fluid Attacks
-            </span>
+        <div class="pr3 pt3">
+          <a href="https://clutch.co/profile/fluid-attacks#reviews" target="_blank" rel="noopener noreferrer">
+            <img loading="lazy" src="{{ SITEURL }}/theme/images/clutch-review.png"
+                alt="Clutch Review">
           </a>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="pb4 w-footer-links ml0-footer text-center-ml db-l dn nowrap">
-    <div class="pt4-l b dib v-top tl mr2">
-      <div class="lh-2">
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-          href="{{ SITEURL }}/products/" >
-          Products
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/products/integrates/">
-          Integrates
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/products/drills/">
-          Drills
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/products/forces/">
-          Forces
-        </a><br>
-      </div>
-    </div>
-    <div class="pt4-l b dib v-top tl mh2">
-      <div class="lh-2">
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-          href="{{ SITEURL }}/services/continuous-hacking/" >
-          Services
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/services/continuous-hacking/">
-          Continuous Hacking
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/services/one-shot-hacking/">
-          One-shot Hacking
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/services/comparative/">
-          Comparative
-        </a><br>
-      </div>
-    </div>
-    <div class="pt4-l b dib v-top tl mh2">
-      <div class="lh-2">
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-          href="{{ SITEURL }}/about-us/" >
-          About Us
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/about-us/certifications/">
-          Certifications
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/about-us/differentiators/">
-          Differentiators
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/about-us/values/">
-          Values
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/about-us/reviews/">
-          Reviews
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/resources/">
-          Resources
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/about-us/events/">
-          Events
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/about-us/people/">
-          People
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/about-us/partners/">
-          Partners
-        </a><br>
-        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/security/">
-          Security
-        </a><br>
-      </div>
-    </div>
-    <div class="pt4-l b dib v-top tl mh2">
-      <div class="lh-2">
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-          href="{{ SITEURL }}/blog/" >
-          Blog
-        </a><br>
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-          href="{{ SITEURL }}/careers/" >
-          Careers
-        </a><br>
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="{{ SITEURL }}/faq/" >
-          FAQ
-        </a><br>
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="https://community.fluidattacks.com/" >
-          Community
-        </a><br>
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="{{ SITEURL }}/contact-us/" >
-          Contact
-        </a><br>
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="{{ SITEURL }}/subscription/" >
-          Newsletter
-        </a><br>
-      </div>
-    </div>
-    <div class="pt4-l b dib v-top tl mw-14 fr-xl">
-      <div class="social-media">
-        <a class="pr3 no-underline" href="https://www.instagram.com/fluidattacks/">
-          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.png"
-            alt="Instagram logo">
-        </a>
-        <a class="pr3 no-underline" href="https://www.facebook.com/Fluid-Attacks-267692397253577/">
-          <img loading="lazy" class="hv-fluid-rd w1" src="{{ SITEURL }}/theme/images/social-media/social-facebook.png"
-            alt="Facebook logo">
-        </a>
-        <a class="pr3 no-underline" href="https://www.linkedin.com/company/fluidattacks/">
-          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-linkedin.png"
-            alt="Linkedin logo">
-        </a>
-        <a class="pr3 no-underline" href="https://twitter.com/fluidattacks/">
-          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-twitter.png"
-            alt="Twitter logo">
-        </a>
-        <a class="pr3 no-underline" href="https://www.youtube.com/c/fluidattacks/">
-          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-youtube.png"
-            alt="Youtube logo">
-        </a>
-      </div>
-      <div class="pr3 pt3">
-        <a href="https://clutch.co/profile/fluid-attacks#reviews" target="_blank" rel="noopener noreferrer">
-          <img loading="lazy" src="{{ SITEURL }}/theme/images/clutch-review.png"
-              alt="Clutch Review">
-        </a>
       </div>
     </div>
   </div>
 </div>
-<div class="mb0-l mb0-m mb3 ph3">
+<div class="mb0-l mb0-m mb3 ph3 bg-white">
   <div class="tc nb3">
-    <p class="c-fluid-gray b f6 fw2 roboto">Copyright © 2020 Fluid Attacks, We hack your software. All rights reserved.</p>
+    <p class="c-fluid-gray b f6 fw2 roboto pv3 mv0">Copyright © 2020 Fluid Attacks, We hack your software. All rights reserved.</p>
   </div>
   <!-- status bar -->
-  <div class="h2 bg-white b tc mb3">
+  <div class="h2 bg-white b tc pb3">
     <a class="c-fluid-bk f6 fw2 no-underline mt2 roboto pl3 hv-fluid-dkred"
        href="http://status.fluidattacks.com/">
        Service status
