--- a/integrates/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/integrates/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -15,6 +15,11 @@
   padding: 0 2px;
 }
 
+:local .navbarForm {
+  margin-bottom: 4px;
+  margin-top: 4px;
+}
+
 :local .splitButton button:active,
 .splitButton button:focus,
 .splitButton button:hover {
