refac(front): #3683 replace products logos
- Replaced each products logos for a mini logo + text to improve SEO


Former-commit-id: b81a3095f43919ec96f091d59400a514587e338c

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -90,10 +90,15 @@
           alt="Young hacker smiling">
         </div>
         <div class="w-45-l fl-l tl-l tc mw6">
-          <img
-          class="pv3"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-logo.png"
-          alt="integrates logo">
+          <h2 class="f1 fw6 c-fluid-bk roboto mv3">
+            <i>
+              <img
+              class="nb2"
+              src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
+              alt="Fluid Attacks Small Logo">
+            </i>
+            integrates
+          </h2>
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
             The Platform Element that Controls the Process to Achieve Remediation
           </h3>
@@ -119,10 +124,15 @@
           alt="Young hacker smiling">
         </div>
         <div class="w-45-l fr-l tr-l tc mw6">
-          <img
-          class="pv3"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-logo.png"
-          alt="Drills logo">
+          <h2 class="f1 fw6 c-fluid-bk roboto mv3">
+            <i>
+              <img
+              class="nb2"
+              src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
+              alt="Fluid Attacks Small Logo">
+            </i>
+            drills
+          </h2>
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
             The Human Element that Continuously Detects Vulnerabilities
           </h3>
@@ -148,10 +158,15 @@
           alt="Young hacker smiling">
         </div>
         <div class="w-45-l fl-l tl-l tc mw6">
-          <img
-          class="pv3"
-          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-logo.png"
-          alt="Forces logo">
+          <h2 class="f1 fw6 c-fluid-bk roboto mv3">
+            <i>
+              <img
+              class="nb2"
+              src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
+              alt="Fluid Attacks Small Logo">
+            </i>
+            forces
+          </h2>
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tl-l tc lh-18">
             The Robot Element that Breaks the Build to Force Remediation
           </h3>
