--- a/theme/2020/templates/footer.html
+++ b/theme/2020/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="bg-white">
-  <div class="mw9 center df-l db-ml pb5-l pb5-m pb4 pt4-ns pt2 footer-component">
+  <div class="mw-1366 ph-body center df-l db-ml pb5-l pb5-m pb4 pt4-ns pt2 footer-component">
     <!-- company logo -->
     <div class="pt1 pt4-l pl2-l w-footer-phrase mh-ml">
       <div>
