--- a/theme/2020/templates/index.html
+++ b/theme/2020/templates/index.html
@@ -23,8 +23,8 @@ Blog | {{ SITENAME }}
 <div class="pv0 mt-body">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
-      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+    <div class="roboto f6-l f7 tl mw-1366 ph-body ml-auto mr-auto">
+      <ul class="dib list w-auto ph0">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
