--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -14,7 +14,7 @@
 {% block header %}
 
 <div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s section-height minh-100vh">
-  <div class="ba1 mb3 relative dt-ns mt-body pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
+  <div class="ba1 mb3 relative dt-ns mt-body ph-body pt3 ma-auto pt6-l pt4 mw-1366 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
          data-aos="fade-right"
@@ -186,7 +186,7 @@
   </div>
 </div>
 <div class="bg-solutions bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
-  <div class="mw9 pl3 center pv0-l pv4">
+  <div class="mw-1366 ph-body center pv0-l pv4">
     <div class="dib-l width-sols v-top">
       <h2 class="white roboto f2 fw7 title-sols display-sols mv3">
         Security Solutions for your Business
