--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -1,7 +1,7 @@
 <div id="navbar" class="cssmenu bg-white lh-solid h-navbar cover ba b--light-gray fixed w-100 top-0 z-max t-all-5">
-  <div class="b relative w-100 z-5 mw9 mr-auto ml-auto h-navbar">
+  <div class="b relative w-100 z-5 mw-1366 mr-auto ml-auto h-navbar ph-body">
     <ul class="list ma0 pa0 overflow-hidden h-navbar">
-      <li class="relative fl ml3 pv4 mv1">
+      <li class="relative fl pv4 mv1">
         <div class="lower">
           <span id="openbtn" class="pointer dib h2-l">
             <img loading="lazy" class="w2" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
@@ -10,9 +10,9 @@
         </div>
         <div class="db-l dn">
           <div id="mySidenavXl" class="sidenav bg-white fixed h-100 w-100 top-0 left-0 z-100 overflow-y-auto dn fadein">
-            <div class="mw9 center flex">
+            <div class="mw-1366 ph-body center flex">
               <div class="h-100 w-10 dib">
-                <span id="closebtn" class="pointer relative fl ml3 pv4 mv2">
+                <span id="closebtn" class="pointer relative fl pl-body pv4 mv2">
                   <img
                   class="w2"
                   src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/cross.png"
@@ -527,7 +527,7 @@
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
-      <li class="relative fr mr3 pv4 mv1 db-l dn">
+      <li class="relative fr pv4 mv1 db-l dn">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/contact-us/">
           <button class="outline-transparent fw7 br2 bw1 ph2 pv2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">Contact</button>
@@ -594,7 +594,7 @@
       </li>
     </ul>
   </div>
-  <div class="mw9 ml-auto mr-auto">
+  <div class="mw-1366 ml-auto mr-auto">
     <form action="{{ SITEURL }}/search.html">
       <div class="search-div search roboto h2 w-100 bg-graylight tr dn h3">
         <input type="text"
