--- a/theme/2020/templates/resources/resources.html
+++ b/theme/2020/templates/resources/resources.html
@@ -29,8 +29,8 @@
 <div class="pv0 mt-body bg-graylight">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
-      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+    <div class="roboto f6-l f7 tl mw-1366 ph-body ml-auto mr-auto">
+      <ul class="dib list w-auto ph0">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
@@ -65,8 +65,8 @@
 {% endblock header %}
 
 {% block content %}
-<div class="roboto mw9 pv4-l pv3 mr-auto ml-auto">
-  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt3 mw9 ml-auto mr-auto">
+<div class="roboto mw-1366 ph-body pv4-l pv3 mr-auto ml-auto">
+  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt3 ml-auto mr-auto">
     <div class="fr-l tc ml-auto mr-auto">
       <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/rules.png"
@@ -85,7 +85,7 @@
       </a>
     </div>
   </div>
-  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt3 mw9 ml-auto mr-auto">
+  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt3 ml-auto mr-auto">
     <div class="fr-l tc ml-auto mr-auto">
       <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/asserts.png"
