--- a/theme/2020/templates/services/feature.html
+++ b/theme/2020/templates/services/feature.html
@@ -32,8 +32,8 @@
 <div class="pv0 mt-body">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
-      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+    <div class="roboto f6-l f7 tl mw-1366 ph-body ml-auto mr-auto">
+      <ul class="dib list w-auto ph0">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
@@ -72,7 +72,7 @@
 
 {% block content %}
 <div class="bg-graylight flex-ns flex-wrap-ns justify-between-m bg-banner-sz coverm cover-s h-auto">
-	<div class="ph5-ns ma-auto mw9 w-100-ns w-90 pv4-ns pt3 pb4">
+	<div class="ma-auto mw-1366 ph-body w-100-ns w-90 pv4-ns pt3 pb4">
 		<a class="feature-button-l roboto fw1 fl f3-ns f5 no-underline c-fluid-bk"
 			 href="{{ SITEURL }}/services/{{ page.category }}/">
 				<img
@@ -94,7 +94,7 @@
 	</div>
 </div>
 <div class="bg-graylight flex-ns flex-wrap-ns justify-between-m bg-banner-sz coverm cover-s h-auto pb5">
-	<div class="pb5 ph5-ns ma-auto mw9 ml-auto mr-auto">
+	<div class="pb5 ma-auto mw-1366 ph-body ml-auto mr-auto">
 		<div class="fr-l w-45-l w100-m w90-s center mt-6-l">
 			<img
 			src="{{ SITEURL }}/{{ page.url }}cover.png"
