--- a/theme/2020/templates/contact-us.html
+++ b/theme/2020/templates/contact-us.html
@@ -25,7 +25,7 @@
 {% endblock title %}
 
 {% block content %}
-<div class="mw9 flex flex-wrap ml-auto mr-auto pt4-l contact-page mt-body">
+<div class="mw-1366 ph-body flex flex-wrap ml-auto mr-auto pt4-l contact-page mt-body">
   <div class="w-50-l w-100">
     <div class="slideshow-container">
       <div class="slideshow-inner">
@@ -63,7 +63,7 @@
     </div>
   </div>
 </div>
-<div class="pb6-ns pb4 mw9 ml-auto mr-auto flex">
+<div class="pb6-ns pb4 mw-1366 ph-body ml-auto mr-auto flex">
   <div class="w-50-l db-l dn">
     <p class="roboto tl fw1 f4 lh-2 mr-auto ml-auto w36-l">
       Since 2001, <b class="fw7">Fluid Attacks</b> has been developing technology
