--- a/theme/2020/templates/services/one-shot.html
+++ b/theme/2020/templates/services/one-shot.html
@@ -32,8 +32,8 @@
 <div class="pv0 mt-body">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
-      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+    <div class="roboto f6-l f7 tl mw-1366 ph-body ml-auto mr-auto">
+      <ul class="dib list w-auto ph0">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
@@ -98,7 +98,7 @@
 <div class="services tc roboto w-100 center c-lightblack">
   {{ page.content }}
 </div>
-<div class="mw9 center pb5">
+<div class="mw-1366 ph-body center pb5">
   <div class="carousel overflow-y-hidden overflow-x-auto w-auto pa2 nowrap pv5"
        id="carousel">
     <div class="item-carousel mh6 pr3 pa0 dib">
