--- a/theme/2020/templates/solution.html
+++ b/theme/2020/templates/solution.html
@@ -29,8 +29,8 @@
 <div class="pv0 mt-body">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
-      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+    <div class="roboto f6-l f7 tl mw-1366 ph-body ml-auto mr-auto">
+      <ul class="dib list w-auto ph0">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
@@ -69,10 +69,10 @@
 {% endblock header %}
 
 {% block content %}
-<div class="mw9 center roboto">
+<div class="mw-1366 ph-body center roboto">
   <!-- Section 1: Title -->
   <div class="w-100 pv4">
-    <div class="center justify-center items-center flex flex-wrap ph3">
+    <div class="center justify-center items-center flex flex-wrap">
       <div>
         <div class="w-40-l fl-l tl pr3-l">
           <img
