fix(front): #3693 center items in the topbar
- Centered vertically the items in the topbar


Former-commit-id: 4424153b243e33bf981798cc3002d0e9d95dae7a

--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -527,13 +527,13 @@
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
-      <li class="relative fr pv4 mv1 db-l dn">
+      <li class="relative fr pv4 db-l dn">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/contact-us/">
           <button class="outline-transparent fw7 br2 bw1 ph2 pv2 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">Contact</button>
         </a>
       </li>
-      <li class="relative fr mr3 pr2 pv4 mv1 db-l dn">
+      <li class="relative fr mr3 pr2 pv4 db-l dn">
         <a class="tc no-underline f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="https://integrates.fluidattacks.com/">
           <button class="outline-transparent c-dkred fw7 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Login</button>
@@ -543,7 +543,7 @@
         <div class="h3 w1 b--moon-gray br"></div>
       </li>
       <!-- Searching features -->
-      <li class="relative fr mr3 pv4 mv1 db-l dn">
+      <li class="relative fr mr3 pv4 db-l dn">
         <label for="tipue_search_input"
           class="search-box-label">
           <span>
@@ -553,19 +553,19 @@
           </span>
         </label>
       </li>
-      <li class="db-xl display-none relative fr mr3 pv4 mv1">
+      <li class="db-xl display-none relative fr mr3 pv4">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/blog/">
           <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Blog</button>
         </a>
       </li>
-      <li class="db-xl display-none relative fr mr3 pr2 pv4 mv1">
+      <li class="db-xl display-none relative fr mr3 pr2 pv4">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/resources/">
           <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">Resources</button>
         </a>
       </li>
-      <li class="db-l dn fr mr3 pr2 pv4 mv1 usecases-index">
+      <li class="db-l dn fr mr3 pr2 pv4 usecases-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/services/continuous-hacking/">
           <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">
@@ -578,7 +578,7 @@
           <a class="f-key-features fw4" href="{{ SITEURL }}/services/comparative/">Comparative</a>
         </div>
       </li>
-      <li class="db-l dn fr mr3 pr2 pv4 mv1 products-index">
+      <li class="db-l dn fr mr3 pr2 pv4 products-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/products/">
           <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">
