fix(front): #3691 breadcrumb top margin
- Change the unit in the top margin for the breadcrumb to rem


Former-commit-id: b3c51839a4dc22d6063c8fe2dfc4008fad54763d

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -224,7 +224,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .h-logo { height: 5rem; }
 .h-navbar { height: 6.5rem; }
 .t-all-5 { transition: all .5s; }
-.mt-body { margin-top: 104px; }
+.mt-body { margin-top: 6.5rem; }
 .nt-landing { margin-top: -110px;}
 .title-sols { text-align: center; }
 .width-sols { width: 100%; }
